--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Merry Christmas My Love</title>
 </head>
 <body>
-    <h1>Meery Christmas</h1>
+    <h1>Merry Christmas</h1>
 </body>
 </html>
