Added Santa's Sleigh

--- a/index.html
+++ b/index.html
@@ -10,12 +10,49 @@
 
 <body>
     <section id="firstPage">
-        <h1>Merry Christmas</h1>
+        <h1 id="Title">Merry Christmas</h1>
+        <div id="sleigh" class="sleigh">
+            <div class="struts front"></div>
+            <div class="struts back"></div>
+            <div class="chassis">
+                <div class="chassis seat"></div>
+            </div>
+            <div class="skis">
+                <div class="skis tips"></div>
+            </div>
+
+            <div id="santa" class="santa">
+                <div class="santa-body">
+                    <div class="santa-body santa-button"></div>
+                </div>
+                <div class="santa-torso">
+                    <div class="santa-torso santa-shoulder">
+                        <div id="arm" class="santa-arm"></div>
+                    </div>
+                    <div class="santa-head">
+                        <div class="eyel"></div>
+                        <div class="eyer"></div>
+                        <div id="beard" class="santa-beard"></div>
+                        <div class="hat">
+                            <div class="hat-top">
+                                <div id="hatPoof" class="hat-poof"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section>
-        <canvas id="myCanvas"></canvas>
+        <canvas id="myCanvas1"></canvas>
+        <div>TESTING</div>
+        <canvas id="myCanvas2"></canvas>
     </section>
     <script src="script.js"></script>
+    <script src="santa.js"></script>
+    <script>
+        
+    </script>
 </body>
 
 </html>
