--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     </section>
     <section>
         <canvas id="myCanvas1"></canvas>
-        <div>TESTING</div>
+        <div><p>Greetings, my dearest Princess Catherine,</p>
+            <p>As the holiday season approaches and the year draws to a close, I am filled with gratitude and love for you. You are the light of my life, and I am honored to call you mine.</p>
+        </div>
         <canvas id="myCanvas2"></canvas>
     </section>
     <script src="script.js"></script>
