--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
     </section>
     <section>
         <canvas id="myCanvas1"></canvas>
-        <div><p id="line1">Greetings, my dearest Princess Catherine,</p>
-            <p>As the holiday season approaches and the year draws to a close, I am filled with gratitude and love for you. You are the light of my life, and I am honored to call you mine.</p>
+        <div id="message" class="message">
+            <p id="line1"></p>
+            <p id="line2"></p>
+            <p id="line3"></p>
+            <p id="line4"></p>
         </div>
         <canvas id="myCanvas2"></canvas>
     </section>
