--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section id="firstPage">
-        <h1 id="Title">Merry Christmas</h1>
+        <h1 id="Title">Merry Christmas Catherine</h1>
         <div id="sleigh" class="sleigh">
             <div class="struts front"></div>
             <div class="struts back"></div>
@@ -56,7 +56,7 @@
     <script src="script.js"></script>
     <script src="santa.js"></script>
     <script>
-        
+
     </script>
 </body>
 
